--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: org.h2.Driver
-    url: jdbc:h2:file:C:/data/estado_db_rony
+    url: jdbc:h2:file:~/estado_db_rony
     username: sa
     password: 
   h2:
